--- a/src/pages/park-list/park-list.html
+++ b/src/pages/park-list/park-list.html
@@ -3,7 +3,10 @@
   <ion-navbar>
     <ion-title>National Parks</ion-title>
   </ion-navbar>
-
+  <ion-toolbar>
+  	<ion-searchbar [(ngModel)]="searchQuery" (ionInput)="getParksSearch($event)" (ionClear)="resetList($event)">
+  	</ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 
