--- a/src/pages/park-list/park-list.html
+++ b/src/pages/park-list/park-list.html
@@ -11,8 +11,8 @@
 
 
 <ion-content>
-<ion-list>
-	<ion-item *ngFor="let park of parks"
+<ion-list [virtualScroll]="parks">
+	<ion-item *virtualItem="let park"
 						(click)="goParkDetails(park)" detail-push>
 		<ion-thumbnail item-left>
 			<img src="assets/img/thumbs/{{park.image}}">
