--- a/src/pages/park-list/park-list.html
+++ b/src/pages/park-list/park-list.html
@@ -11,7 +11,11 @@
 
 
 <ion-content>
-<ion-list [virtualScroll]="parks">
+<ion-list [virtualScroll]="parks" [headerFn]="customHeaderFn">
+	<ion-item-divider *virtualHeader="let header">
+		{{ header }}
+	</ion-item-divider>
+
 	<ion-item *virtualItem="let park"
 						(click)="goParkDetails(park)" detail-push>
 		<ion-thumbnail item-left>
